--- a/rick-and-morty-app/src/index.html
+++ b/rick-and-morty-app/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>RickAndMortyApp</title>
 		<base href="/" />
-		<link rel="shortcut icon" href="../src/pngegg.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="./assets/multimedia/rick_96214.ico" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
